fixed sidebar overflow on devices

--- a/app/components/dashboard/sidebar-elements.css
+++ b/app/components/dashboard/sidebar-elements.css
@@ -30,7 +30,7 @@
 .mnd-sidebar-footer-address {
   font-size: 15px !important; }
 
-@media (max-height: 550px) {
+@media (max-height: 580px) {
   #mnd-sidebar-footer span {
     padding-bottom: 15px; }
   .mnd-sidebar-footer-address {
